# src/main/java/com/hyperativa/card/model/CardEntity.java
@@ -5,19 +5,19 @@ import lombok.Getter;
 import lombok.Setter;
 
 @Entity
-@Table(name = "cards") // Nome da tabela que será criada/buscada no MySQL
+@Table(name = "card") // Nome da tabela que será criada/buscada no MySQL
 @Getter
 @Setter
-public class Card {
+public class CardEntity {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
-    @Column(name = "client_name", nullable = false)
-    private String clientName;
+    @Column(name = "client_id", nullable = false)
+    private Long idClient;
 
-    @Column(name = "card_number", nullable = false)
+    @Column(name = "card_number", nullable = false, unique = true)
     private String cardNumber;
 
 }
